force-app/main/default/objects/Vacancy__c.object
<CustomObject>
    <label>Vacancy</label>
    <nameField>
        <label>Vacancy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vacancy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>