force-app/main/default/objects/Vacancy__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vacancy</relationshipLabel>
    <relationshipName>Vacancy</relationshipName>
    <type>Lookup</type>
</CustomField>