force-app/main/default/objects/Vacancy__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>applied</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>await</fullName>
                <isActive>false</isActive>
                <label>await</label>
            </value>
            <value>
                <fullName>open</fullName>
                <isActive>false</isActive>
                <label>open</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>