force-app/main/default/objects/Vacancy__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>